Bug fix: overdue task color increase contrast

--- a/frontend/CycList/src/app/dashboard/dashboard.component.scss
+++ b/frontend/CycList/src/app/dashboard/dashboard.component.scss
@@ -57,7 +57,7 @@ h3 {
 }
 
 .overdue-tasks {
-  color: $color-red;
+  color: $warn;
 }
 
 .complete-rate > div {
